# TurtleBot-Trajectory-Control

./: .gitignore  README.md  odom_log.csv  references.txt  run_simulation.sh  temp  visualize_path.py  waypoints.csv  waypoints_long_path.csv  waypoints_loop.csv  waypoints_square.csv  waypoints_time.csv  waypoints_time_long_path.csv
curvature_velocity_planner/: CMakeLists.txt  package.xml
curvature_velocity_planner/src/: curvature_velocity_node.cpp
odom_logger/: CMakeLists.txt  package.xml
odom_logger/src/: odom_logger_node.cpp
pure_pursuit_controller/: CMakeLists.txt  package.xml
pure_pursuit_controller/src/: pure_pursuit_node.cpp
scripts/: setup_simulation.sh
spline_path_planner/: CMakeLists.txt  package.xml
spline_path_planner/src/: spline_planner_node.cpp
urdf/: diff_drive_robot.sdf
