<?xml version="1.0"?>
<package format="3">
  <name>curvature_velocity_planner</name>
  <version>0.0.1</version>
  <description>Curvature-based velocity planner for 2D spline paths</description>
  <maintainer email="your_email@example.com">Hitesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
