<?xml version="1.0"?>
<package format="3">
  <name>odom_logger</name>
  <version>0.0.1</version>
  <description>
    Package that logs the odom data to a file.
  </description>

  <maintainer email="you@example.com">Hitesh</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime & build dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Optional but recommended -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
